# AI_Research_Assistant

./: README.md  pyproject.toml
src/: data_loader.py  generate_embedding.py  setup_rag.py  setup_vector_store.py  utils.py
